--- a/css/styles.css
+++ b/css/styles.css
@@ -8,107 +8,113 @@
     font-family: 'Lato', sans-serif;
     font-size: 18px;
     scroll-behavior: smooth;
+    text-align: center;
 }
 
 body {
     background: #fbfbfb;
     min-height: 100vh;
     line-height: 1.2;
-
-
+    padding: 20px;
 }
 
 main {
-    max-width: 1200px;
+
+    max-width: 100%;
     margin: auto;
-    margin-top: 150px;
 }
 
 
 a {
+
     text-decoration: none;
     color: inherit;
+    justify-content: space-between;
+    padding: 10px;
 }
+
 
 ul {
+    display: flex;
+    padding: 10px;
     list-style: none;
+
 }
+
 
 h1 {
-    font-size: 36px;
+    font-size: 24px;
 }
 
-.nav-bar li {
-    margin-right: 50px;
-}
 
 .header {
     display: flex;
     justify-content: space-between;
     background-color: #fbfbfb;
+    padding: 10px;
     align-items: center;
-    height: 90px;
-    width: 100%;
-    padding: 20px;
-    word-spacing: 5px;
     border-bottom: 1px solid #000;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-    margin-bottom: 20px;
-    margin: 0;
     position: fixed;
     top: 0;
     left: 0;
     right: 0;
     z-index: 9999;
-
-
-}
-
-.header .logo {
-    cursor: pointer;
 }
 
 
 .header .logo img {
-    height: 85px;
+    height: 65px;
     width: auto;
     transition: all 0.3s;
 }
 
 .header .logo img:hover {
-    transform: scale(1.2);
+    transform: scale(1.3);
 }
 
-.header .nav-bar li {
-    display: inline-block;
-    padding: 0;
+
+.header .logo {
+    cursor: pointer;
 
 }
 
-.header .nav-bar li a:hover {
-    color: rgb(198, 127, 182)
+.nav-bar ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
 }
+
+.nav-bar ul li {
+    margin-bottom: 10px;
+
+
+}
+
+
 
 .imagen {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
 }
+
 
 .foto-desarrollador {
     width: 400px;
     height: 400px;
     border-radius: 50%;
-    margin: 20px;
+    margin: 100px 50px 80px 50px;
     padding: 20px;
+
 }
 
+
 p {
-    margin: 50px;
-    justify-content: center;
-    text-align: justify;
+    margin: 20px 0;
+    text-align: center;
 }
 
 div>button {
@@ -119,32 +125,29 @@ div>button {
     border: none;
     padding: 10px 20px;
     border-radius: 20px;
-    font-size: 20px;
+    font-size: 18px;
 }
 
-
 #contacto {
-    background-color: rgb(175, 89, 158, 0.3);
+    background-color: rgba(175, 89, 158, 0.3);
     color: #0f0f0f;
     text-align: center;
-    padding: 50px;
+    padding: 20px;
     border-radius: 20px;
-    margin: 200px 20px 40px 20px;
-
+    margin: 100px 0 20px 0;
 }
 
 .redes-sociales {
     display: flex;
-    justify-content: space-evenly;
-
+    justify-content: center;
+    margin-bottom: 20px;
 }
 
 .redes-sociales img {
-    max-width: 70px;
+    max-width: 40px;
     height: auto;
-    margin-right: 50px;
+    margin-right: 10px;
 }
-
 
 .footer {
     background-color: #af599e;
@@ -152,11 +155,11 @@ div>button {
     padding: 10px;
     text-align: center;
     font-size: 14px;
-    margin-top: 100px;
-    height: 90px;
+    margin-top: 20px;
 }
 
 .footer p {
+    margin: 0;
     text-align: center;
 }
 
@@ -173,46 +176,7 @@ div>button {
     z-index: 1000;
 }
 
+
 .whatsapp-float i {
     margin-right: 5px;
-}
-
-@media screen and (max-width: 768px) {
-    .nav-bar {
-        flex-direction: column;
-        align-items: flex-start;
-        height: auto;
-    }
-
-    .nav-bar ul {
-        flex-direction: column;
-        align-items: flex-start;
-        margin-top: 1rem;
-    }
-
-    .nav-bar li {
-        margin-right: 0;
-        margin-bottom: 1rem;
-    }
-
-    .header {
-        flex-direction: column;
-        align-items: flex-start;
-        height: auto;
-        padding: 10px;
-
-    }
-
-    .header .logo img {
-        height: 4rem;
-    }
-
-    .foto-desarrollador {
-        width: 250px;
-        height: 250px;
-    }
-
-    p {
-        margin: 1rem
-    }
 }
